--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
     <!-- Container (About Section) -->
     <div class="w3-content w3-container w3-padding-64" id="about">
       <h3 class="w3-center">ABOUT ME</h3>
-      <p class="w3-center"><em>I love photography</em></p>
-      <p>We have created a fictional "personal" website/blog, and our fictional character is a hobby photographer. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-        qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p class="w3-center"><em>I love design</em></p>
+      <p>Brenda Flores, currently a team member to Payte Miller Interiors LLC, graduated from Design Institute of San Diego. 
+        My strengths are that I am tenacious, hardworking, 
+        organized and passionate about design quality.</p>
       <div class="w3-row">
         <div class="w3-col m6 w3-center w3-padding-large">
-          <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br>
-          <img src="/w3images/avatar_hat.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
+          <p><b><i class="fa fa-user w3-margin-right"></i>Brenda Flores</b></p><br>
+          <img src=".jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
         </div>
     
         <!-- Hide this text on small devices -->
@@ -213,7 +213,6 @@
         <i class="fa fa-twitter w3-hover-opacity"></i>
         <i class="fa fa-linkedin w3-hover-opacity"></i>
       </div>
-      <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
     </footer>
      
     <!-- Add Google Maps -->
